# Tribrain

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  biphase_replay.py  k8s-deployment.yaml  k8s-hpa.yaml  k8s-secrets.yaml  performance_benchmarks.tsx  pyproject.toml  semantic_cortex.py  tribrain_demo.tsx
docs/: UPLOAD_TO_WOW.md  V6_1_PREFERENCE_LORA.md
scripts/: run_subprocess_3brain.py  train_lora_reward_model.py
src/tribrain/: __init__.py  budget.py  cli.py  orchestrator.py  types.py
src/tribrain/brains/: __init__.py  belief.py  executive.py  executive_llm.py  meta.py  meta_value.py
src/tribrain/continual/: __init__.py  dataset.py  preference_dataset.py
src/tribrain/critics/: __init__.py  base.py  video_metrics.py  vlm_critic.py
src/tribrain/dashboard/: __init__.py  report.py
src/tribrain/features/: __init__.py  context.py  meta_context.py  text_pair.py
src/tribrain/integrations/: __init__.py  subprocess_world_model.py  wow.py
src/tribrain/llm/: __init__.py  base.py  ollama.py
src/tribrain/memory/: __init__.py  episodic.py  replay.py
src/tribrain/ontology/: __init__.py  compress.py  extractor.py  schema.py
src/tribrain/reward/: __init__.py  model.py  preference.py
src/tribrain/rl/: __init__.py  bandit.py  hierarchical_contextual.py
src/tribrain/storage/: __init__.py  calibration.py  checkpoint.py  sqlite_migrator.py  sqlite_schema.py  trace.py
src/tribrain/trainers/: __init__.py  bt_reward_model.py  lora_reward_model.py  pairs.py
src/tribrain/utils/: seeding.py
tests/: test_belief.py  test_cli_smoke.py  test_dashboard.py  test_episode_store.py  test_hierarchical_controller.py  test_meta.py  test_meta_value_model.py  test_preference_dataset.py  test_preference_reward_model.py  test_reward_model.py  test_sqlite_migration.py
