[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
[project]
name = "tribrain-worldmodels"
version = "0.6.2"
description = "Tri-Brain (Executive + Bayesian Belief + Metacognition) control layer for world models (SOPHIA-style generate→critic→refine)."
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [{name = "Maintainers", email = "maintainers@example.com"}]
keywords = ["world-models", "robotics", "diffusion", "agent", "metacognition", "bayesian"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
]

dependencies = [
  "numpy>=1.24",
  "opencv-python>=4.8",
  "pillow>=10.0",
  "tqdm>=4.66",
  "requests>=2.31",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "pytest-cov>=4.1",
  "ruff>=0.5.0",
  "mypy>=1.8",
  "types-tqdm",
]
docs = [
  "mkdocs>=1.6",
  "mkdocs-material>=9.5",
]

dashboard = [
  "matplotlib>=3.8",
]

vlm = [
  "torch>=2.1",
  "transformers>=4.40",
  "accelerate>=0.30",
]

lora = [
  "torch>=2.1",
  "transformers>=4.40",
  "accelerate>=0.30",
  "datasets>=2.18",
  "peft>=0.10",
]

[project.urls]
Homepage = "https://github.com/<your-org>/tribrain-worldmodels"
Issues = "https://github.com/<your-org>/tribrain-worldmodels/issues"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["tribrain"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[project.scripts]
tribrain = "tribrain.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
